--- a/src/pages/Boon/Home.css
+++ b/src/pages/Boon/Home.css
@@ -58,8 +58,9 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
     top: 57px;
-    left: 1380px;
+    left: 1500px;
     display: flex;
+    z-index: 0;
 }
 
 
@@ -77,4 +78,5 @@
     font-size: 72px;
     position: relative;
     cursor: pointer;
+    z-index: 1;
 }
