--- a/src/pages/Khim/MainPost.css
+++ b/src/pages/Khim/MainPost.css
@@ -4,15 +4,23 @@
 .mainPostContainer {
     margin: auto;
     width: 1920px;
-    height: 1080px;
+    height: auto;
     background-color: rgba(245, 234, 220, 1);
 }
 
+.mainImg {
+       background-image: url(./picture/toolBar.png);
+       height: 225px;
+       position: fixed;
+       width: 1920px;
+       z-index: 1;
+}
+
 .mainToolBar {
-    background-image: url(./picture/toolBar.png);
+    /* background-image: url(./picture/toolBar.png); */
     width: 1920px;
     height: 225px;
-    position: fixed;
+    position: relative;
     margin-top: 0;
     margin-left: 0;
     display: inline;
@@ -68,7 +76,7 @@
     border: 10px solid #F5F5F5;
     background: #EFD3B4;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    position: absolute;
+    position: fixed;
     margin-top: 68px;
     margin-left: 86px;
     font-size: 72px;
@@ -76,15 +84,16 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    z-index: 1;
 }
 
 .mainButtonToProfile {
-    width: 416px;
-    height: 89px;
+    width: fit-content;
+    height: fit-content;
     border-radius: 55.5px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    position: absolute;
+    position: fixed;
     margin-top: 68px;
     margin-left: 1412px;
     font-size: 48px;
@@ -94,10 +103,12 @@
     justify-content: center;
     text-align: center;
     gap: 20;
+    z-index: 1;
 }
 
 .mainFeatureBar {
     position: fixed;
+    z-index: 1;
     width: 470px;
     height: 783px;
     padding-top: 72px;
@@ -132,7 +143,9 @@
     padding-top: 72px;
     margin-top: 125px;
     padding-left: 3px;
+    /* height: 5000px; */
     position: relative;
+    /* z-index: 0; */
     /* background-color: aquamarine; */
 }
 
@@ -152,16 +165,27 @@
 
 .mainPostText {
     left: 84px;
-    width: 766px;
-    height: 300px;
-    border: 17px solid #D3BA9F;
+    width: 1000px;
+    height: auto;
+    margin-top: 0;
+    border: 10px solid #D3BA9F;
     background: #FFF;
     display: flex;
+    flex-direction: column;
     position: relative;
     margin-bottom: 46px;
     align-items: center;
     justify-content: center;
     text-align: center;
+    z-index: 0;
+}
+
+.PostText {
+    border: 10px solid #D3BA9F;
+    background: #FFF;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
 }
 
 .mainPostProfile {
