--- a/src/pages/Khim/MainPost.css
+++ b/src/pages/Khim/MainPost.css
@@ -190,7 +190,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
-    width: 800px;
+    max-width: 900px;
 }
 
 .mainPostProfile {
