--- a/src/pages/Khim/MainPost.css
+++ b/src/pages/Khim/MainPost.css
@@ -2,10 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323:wght@100;400&display=swap');
 
 .mainPostContainer {
-    margin: 0;
-    width: 1920px;
     height: auto;
     background-color: rgba(245, 234, 220, 1);
+    
 }
 
 .mainImg {
@@ -19,10 +18,9 @@
 
 .mainToolBar {
     /* background-image: url(./picture/toolBar.png); */
-    width: 1920px;
+    width: auto;
     height: 225px;
     position: relative;
-    margin: 0;
     display: inline;
 }
 
