--- a/src/pages/Boon/Home.css
+++ b/src/pages/Boon/Home.css
@@ -6,10 +6,16 @@
     background-image: url(./picture/cookieBG.jpg);
     margin: auto;
     width: 1920px;
-    height: 1080px;
+    height: 1200px;
     flex-shrink: 0;
+    position: relative;
+    z-index: 0;
 }
 
+.signInbutton {
+    position: relative;
+    top: -87px;
+}
 
 .homeWelcomeText {
     position: relative;
@@ -56,10 +62,11 @@
     border: 10px solid #F5F5F5;
     background: #EFD3B4;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 57px;
-    left: 1500px;
+    position: relative;
+    top: -53px;
+    left: 1439px;
     display: flex;
+    color: #553D2D;
     z-index: 0;
 }
 
@@ -72,11 +79,11 @@
 
 .homeLogin {
     color: #553D2D;
-    left: 1494px;
-    top: -24px;
+    left: 1528px;
+    top: 68px;
     font-family: Pangolin;
     font-size: 72px;
     position: relative;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
 }
